--- a/Dictionnary/Dictionnary.vcxproj
+++ b/Dictionnary/Dictionnary.vcxproj
@@ -147,6 +147,9 @@
     <ClInclude Include="common.h" />
     <ClInclude Include="dictionnary.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="resources\dico.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
